--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 :root {
   --primaryColor: #004a7b;
   --secondColor: #588525;
@@ -14,7 +17,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--primaryColor); 
+  background-color: var(--primaryColor);
+  font-family: 'Roboto', sans-serif;
 }
 
 @media screen and (max-width: 767px) {
