--- a/src/styles/Save/SaveSucess.css
+++ b/src/styles/Save/SaveSucess.css
@@ -1,5 +1,4 @@
 .Iam {
-  padding: 1.3rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -7,13 +6,15 @@
   font: normal 40px/50px Montserrat, sans-serif;
   color: var(--secondColor);
   width: 100%;
+  background-color: #fff;
+  border-radius: 13px;
 }
 .Iam p {
   height: 50px;
   float: left;
   font-size: 2.8rem;
   font-weight: 600;
-  margin: 0 0 3.5rem 0;
+  margin: 0 0 1.5rem 0;
 }
 .Iam b {
   float: left;
